[package]
name = "marlowe_client"
version = "0.0.5"
authors = ["OpenAPI Generator team and contributors", "nicolas.luduena@txpipe.io"]
description = "HTTP client for the Marlowe Runtime REST API"
documentation = "https://github.com/marlowe-contrib/marlowe-rust-sdk/tree/main/marlowe_client"
readme = "./README.md"
homepage = "https://github.com/marlowe-contrib/marlowe-rust-sdk/tree/main/marlowe_client"
repository = "https://github.com/marlowe-contrib/marlowe-rust-sdk"
license = "Apache 2.0"
edition = "2018"
include = ["src/**/**.rs"]
keywords = ["marlowe", "cardano", "sdk"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
